@@ -1,14 +1,9 @@
 package com.lsh.talk.service;
 
-import com.lsh.talk.domain.ChatProfile;
-import com.lsh.talk.domain.ChatRoom;
-import com.lsh.talk.domain.ChatRoomParticipant;
-import com.lsh.talk.domain.ChatUser;
+import com.lsh.talk.domain.*;
+import com.lsh.talk.dto.ParticipantFriendDTO;
 import com.lsh.talk.dto.response.ChatRoomResponse;
-import com.lsh.talk.repository.ChatProfileRepository;
-import com.lsh.talk.repository.ChatRoomParticipantRepository;
-import com.lsh.talk.repository.ChatRoomRepository;
-import com.lsh.talk.repository.ChatUserRepository;
+import com.lsh.talk.repository.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
@@ -26,29 +21,57 @@ public class ChatRoomServiceImpl implements ChatRoomService {
     private final ChatRoomRepository chatRoomRepository;
     private final ChatRoomParticipantRepository chatRoomParticipantRepository;
     private final ChatUserRepository chatUserRepository;
-
-    private final ChatProfileRepository chatProfileRepository;
+    private final ChatFriendRepository chatFriendRepository;
 
     @Override
     public List<ChatRoomResponse> listOfChatRoomsUserBelongsTo(String userName) {
 
-        ChatUser loginUser = chatUserRepository.findByName(userName).orElseThrow();
+        ChatUser loginUser = chatUserRepository.findByUniqueName(userName).orElseThrow();
 
-        return chatRoomParticipantRepository.findAllByChatUser(loginUser)
+        List<List<ParticipantFriendDTO>> lists = chatRoomParticipantRepository.findChatRoomParticipants(loginUser.getId());
+
+
+//
+//        lists.stream().map(list -> {
+//
+//            list.stream().forEach(participantFriendDTO -> {
+//                participantFriendDTO.
+//            });
+//        })
+//        List<String> chatRoomSubject = chatFriendRepository.findAllByChatUser(participantsUserId)
+//                .stream().map(ChatFriend::getName).toList();
+//
+//        return ChatRoomResponse.builder()
+//                .id(chatRoom.getId())
+//                .name(chatRoomSubject.toString())
+//                .build();;
+
+
+        return null;
+
+        /*return chatRoomParticipantRepository.findAllByChatUser(loginUser)
                 .stream().map(ChatRoomParticipant::getChatRoom).map(chatRoom -> {
 
                     List<UUID> participantsUserId = new ArrayList<>();
 
                     //해당 채팅방 참가자 프로필정보를 조회하여 채팅방 제목을 설정한다.
-                    chatRoomParticipantRepository.findAllByChatRoom(chatRoom).stream().filter(rp->!rp.getChatUser().getName().equals(loginUser.getName())).forEach(rp -> participantsUserId.add(rp.getChatUser().getId()));
-                    List<String> chatRoomSubject = chatProfileRepository.findAllByChatUserIdIn(participantsUserId).stream().map(ChatProfile::getName).toList();
+                    chatRoomParticipantRepository.findAllByChatRoom(chatRoom)
+                            .stream()
+                            .filter(rp->!rp.getChatUser().getUniqueName().equals(loginUser.getUniqueName()))
+                            .forEach(rp -> participantsUserId.add(rp.getChatUser().getId()));
+
+
+                    List<ChatFriend> loginUserFriends = chatFriendRepository.findAllByFriendChatUserIdIn(participantsUserId);
+
+                    List<String> chatRoomSubject = chatFriendRepository.findAllByChatUser(participantsUserId)
+                            .stream().map(ChatFriend::getName).toList();
 
                     return ChatRoomResponse.builder()
                             .id(chatRoom.getId())
                             .name(chatRoomSubject.toString())
                             .build();
 
-                }).toList();
+                }).toList();*/
     }
 
     @Override
@@ -59,28 +82,32 @@ public class ChatRoomServiceImpl implements ChatRoomService {
     @Override
     public void createChatRoom(UserDetails loginUser, List<UUID> chatUserIds) {
 
-        ChatProfile loginUserProfile= chatUserRepository.findByName(loginUser.getUsername())
-                                                    .map(u-> chatProfileRepository.findByChatUserId(u.getId()).orElseThrow()).orElseThrow();
-
-        List<ChatProfile> participantsProfiles = chatProfileRepository.findAllByChatUserIdIn(chatUserIds);
-
-        participantsProfiles.add(loginUserProfile);
+        ChatUser loginChatUser = chatUserRepository.findByUniqueName(loginUser.getUsername()).orElseThrow();
 
         // 새로운 채팅 방 생성
         ChatRoom newChatRoom = ChatRoom.builder()
                 .createdDate(Instant.now())
-                .createdChatUser(loginUserProfile.getChatUser())
+                .createdChatUser(loginChatUser)
                 .build();
 
         chatRoomRepository.save(newChatRoom);
 
-        List<ChatRoomParticipant> chatRoomParticipants = participantsProfiles.stream()
-                                                                     .map(p -> ChatRoomParticipant.builder()
-                                                                                .chatUser(p.getChatUser())
+        //신규 방에 추가한 친구 정보들을 해당 방 참여자 정보에 포함시킨다.
+        List<ChatFriend> friends = chatFriendRepository.findAllByFriendChatUserIdIn(chatUserIds);
+        List<ChatRoomParticipant> chatRoomParticipants = friends.stream()
+                                                                     .map(f -> ChatRoomParticipant.builder()
+                                                                                .chatUser(f.getFriendChatUser())
                                                                                 .chatRoom(newChatRoom)
                                                                                 .joinedDate(Instant.now())
                                                                                 .build())
-                                                                     .toList();
+                                                                     .collect(Collectors.toList());
+
+        //마지막에 로그인한 본인도 생성한 방에 참여시킨다.
+        chatRoomParticipants.add(ChatRoomParticipant.builder()
+                .chatUser(loginChatUser)
+                .chatRoom(newChatRoom)
+                .joinedDate(Instant.now())
+                .build());
 
         chatRoomParticipantRepository.saveAll(chatRoomParticipants);
     }
